cabal-version:      2.4
name:               conduct
version:            0.1.0.0
maintainer:         matthunz2@gmail.com
author:             Matt Hunzinger
build-type:         Custom
extra-source-files: CHANGELOG.md

custom-setup
    setup-depends:
        base,
        process ^>=1.6,
        Cabal

library
    exposed-modules:
        Attribute
        EventLoop
        Html
        VirtualDom

    hs-source-dirs:   app
    default-language: Haskell2010
    extra-libraries:  conduct
    extra-lib-dirs:
        /Users/matt/Documents/conduct/target/aarch64-apple-darwin/debug

    build-depends:
        base ^>=4.17.1.0,
        aeson ^>=2.1,
        bytestring ^>=0.11,
        utf8-string ^>=1.0

executable custom-build
    main-is:            Setup.hs
    build-tool-depends: Cabal:build
    default-language:   Haskell2010
    build-depends:
        base,
        process ^>=1.6,
        Cabal

executable counter
    main-is:          Counter.hs
    hs-source-dirs:   examples
    default-language: Haskell2010
    ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base ^>=4.17.1.0,
        conduct
