cabal-version:      >= 1.10
name:               conduct
version:            0.1.0.0
maintainer:         matthunz2@gmail.com
author:             Matt Hunzinger
build-type:         Custom
extra-source-files: CHANGELOG.md

custom-setup
    setup-depends:
        base >= 4 && < 5,
        directory >=1.3.7,
        filepath >=1.4.2,
        process >=1.6,
        Cabal >= 1.1

library
    exposed-modules:
        Attribute
        EventLoop
        Html
        VirtualDom

    hs-source-dirs:   app
    default-language: Haskell2010
    extra-libraries:  conduct  
    build-depends:
        base >= 4 && < 5,
        aeson >=2.1,
        bytestring >=0.11,
        utf8-string >=1.0,
        stm >=2.5

executable custom-build
    main-is:            Setup.hs
    default-language:   Haskell2010
    build-depends:
        base >= 4 && < 5,
        filepath >=1.4.2,
        process >=1.6,
        Cabal >= 1.1

executable counter
    main-is:          Counter.hs
    hs-source-dirs:   examples
    default-language: Haskell2010
    ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base >= 4 && < 5,
        conduct
